--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <h1>hello world!</h1>
 
     <p>This is my portfolio project</p>
+    <i class="fa-brands fa-instagram"></i>
   </body>
 </html>
