--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/app.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,9 +25,8 @@
       src="https://kit.fontawesome.com/7efdfb9003.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles/app.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <title>Aleksandra - Front End Developer</title>
   </head>
   <body>
     <h1>hello world!</h1>
