--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aleksandra Front-end Developer</title>
     <link rel="stylesheet" href="styles/app.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -15,6 +16,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,13 +27,15 @@
       src="https://kit.fontawesome.com/7efdfb9003.js"
       crossorigin="anonymous"
     ></script>
-
-    <title>Aleksandra - Front End Developer</title>
   </head>
   <body>
-    <h1>hello world!</h1>
-
-    <p>This is my portfolio project</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="hero">
+      <p>PORTFOLIO</p>
+      <h1>Aleksandra Dafine</h1>
+      <h2 class="mb-5">Front-end developer based in Europe</h2>
+      <div>
+        <a href="#" class="btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
