--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@200;300;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <script
       src="https://kit.fontawesome.com/7efdfb9003.js"
       crossorigin="anonymous"
@@ -29,11 +28,83 @@
   </head>
   <body>
     <div class="hero">
-      <p>PORTFOLIO</p>
-      <h1>Aleksandra Dafine</h1>
-      <h2 class="mb-5">Front-end developer based in Europe</h2>
+      <p class="mb-5">PORTFOLIO</p>
+      <h1>Aleksandra Dafina</h1>
+      <h2 class="mb-5 mt-3">Front-end developer based in Europe</h2>
       <div>
         <a href="#" class="btn-branding">Contact me</a>
+      </div>
+    </div>
+    <h5 class="text-center m-5">
+      Some of the featured projects I have worked on
+    </h5>
+    <div class="line mb-5">
+      <hr />
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/world-time1.PNG" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">World Clock Project</h2>
+            <p class="mb-5 text-muted">
+              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
+              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
+              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
+              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
+              feugiat a, tellus. Phasellus viverra nulla ut metus varius
+              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
+              vel augue.
+            </p>
+            <a href="#" class="btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather Project</h2>
+            <p class="mb-5 text-muted">
+              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
+              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
+              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
+              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
+              feugiat a, tellus. Phasellus viverra nulla ut metus varius
+              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
+              vel augue.
+            </p>
+            <a href="#" class="btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/world-weather1.PNG" class="img-fluid" alt="" />
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col d-none d-lg-block">
+          <img src="images/ai-quotes1.PNG" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">AI Motivational Quotes Generator</h2>
+            <p class="mb-5 text-muted">
+              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
+              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
+              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
+              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
+              feugiat a, tellus. Phasellus viverra nulla ut metus varius
+              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
+              vel augue.
+            </p>
+            <a href="#" class="btn-branding-outline">Learn more</a>
+          </div>
+        </div>
       </div>
     </div>
   </body>
