--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@200;300;500;700&display=swap"
       rel="stylesheet"
     />
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -40,11 +41,16 @@
     </h5>
     <div class="line mb-5">
       <hr />
+      <br />
     </div>
     <div class="container">
-      <div class="row">
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/world-time1.PNG" class="img-fluid" alt="" />
+          <img
+            src="images/world-time1.PNG"
+            class="img-fluid img-home-page"
+            alt=""
+          />
         </div>
         <div class="col">
           <div class="project-description">
@@ -62,9 +68,8 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+
+      <div class="row mb-5">
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">Weather Project</h2>
@@ -81,14 +86,21 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/world-weather1.PNG" class="img-fluid" alt="" />
+          <img
+            src="images/world-weather1.PNG"
+            class="img-fluid img-home-page"
+            alt=""
+          />
         </div>
       </div>
-    </div>
-    <div class="container">
-      <div class="row">
+
+      <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/ai-quotes1.PNG" class="img-fluid" alt="" />
+          <img
+            src="images/ai-quotes1.PNG"
+            class="img-fluid img-home-page"
+            alt=""
+          />
         </div>
         <div class="col">
           <div class="project-description">
