Created About me page, used HTML and styled it with CSS

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h1>Aleksandra Dafina</h1>
       <h2 class="mb-5 mt-3">Front-end developer based in Europe</h2>
       <div>
-        <a href="#" class="btn-branding">Contact me</a>
+        <a href="about.html" class="btn-branding">Contact me</a>
       </div>
     </div>
     <h5 class="text-center m-5">
