added additional img and description to home page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
     <div class="hero">
       <p class="mb-5">PORTFOLIO</p>
-      <h1>Aleksandra Dafina</h1>
+      <h1>Aleksandra Dafine</h1>
       <h2 class="mb-5 mt-3">Front-end developer based in Europe</h2>
       <div>
         <a href="about.html" class="btn-branding">Contact me</a>
@@ -116,6 +116,30 @@
             </p>
             <a href="#" class="btn-branding-outline">Learn more</a>
           </div>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Tea Time Project</h2>
+            <p class="mb-5 text-muted">
+              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
+              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
+              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
+              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
+              feugiat a, tellus. Phasellus viverra nulla ut metus varius
+              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
+              vel augue.
+            </p>
+            <a href="#" class="btn-branding-outline">Learn more</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img
+            src="images/tea-time-1.PNG"
+            class="img-fluid img-home-page"
+            alt=""
+          />
         </div>
       </div>
     </div>
