--- a/index.html
+++ b/index.html
@@ -28,6 +28,33 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo2.PNG" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo-small.PNG"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/">Home</a>
+          </li>
+          <li>
+            <a href="/about.html">About</a>
+          </li>
+          <li>
+            <a href="/work.html">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+
     <div class="hero">
       <p class="mb-5">PORTFOLIO</p>
       <h1>Aleksandra Dafine</h1>
