Created Footer, Injected HTML for all the link in the footer, added the footer styling, added media queries in footer styling

--- a/index.html
+++ b/index.html
@@ -169,6 +169,33 @@
           />
         </div>
       </div>
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between m-5 d-none d-md-flex"
+        >
+          <div>
+            <h4>Work Inquiry</h4>
+            <p class="text-muted">Lets work together!</p>
+          </div>
+          <div class="m-3">
+            <a href="" class="btn-branding">Contact Me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center m-5">
+          <a href="mailto:aleksandra10ak@gmail.com" class="email-link"
+            >aleksandra10ak@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="/"><i class="fa-brands fa-instagram"></i></a>
+          <a href="https://github.com/sasha-ak" target="_blank"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/aleksandra-ak/" target="_blank">
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
