--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <p class="text-muted">Lets work together!</p>
           </div>
           <div class="m-3">
-            <a href="" class="btn-branding">Contact Me</a>
+            <a href="" class="btn-branding contact-me-footer">Contact Me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center m-5">
