--- a/about.html
+++ b/about.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aleksandra Frontend Developer</title>
+    <meta
+      name="description"
+      content="Find more information about Aleksandra, junior front-end developer."
+    />
+    <title>About Aleksandra</title>
     <link rel="stylesheet" href="styles/app.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -28,6 +32,36 @@
     ></script>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo2.PNG"
+            class="logo d-none d-md-block"
+            alt="Aleksandra logo"
+          />
+          <img
+            src="images/logo-small.PNG"
+            class="logo d-block d-md-none"
+            alt="Aleksandra logo"
+          />
+        </a>
+        <ul>
+          <li>
+            <a href="/" title="Homepage">Home</a>
+          </li>
+          <li class="active">
+            <a href="/about.html" title="About Aleksandra">About</a>
+          </li>
+          <li>
+            <a href="/work.html" title="Aleksandra's Work">Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Contact Aleksandra">Contact</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <div class="content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -43,13 +77,72 @@
               laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
               vel augue.
             </p>
-            <a href="" class="btn-branding">See my projects</a>
+            <a href="/work.html" class="btn-branding" title="See my projects"
+              >See my projects</a
+            >
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/image-3.jpg" class="img-fluid" alt="" />
+          <img
+            src="images/image-3.jpg"
+            class="img-fluid"
+            alt="Photo of Aleksandra"
+          />
         </div>
       </div>
+
+      <footer>
+        <div
+          class="contact-box d-flex justify-content-between m-5 d-none d-md-flex"
+        >
+          <div>
+            <h3>Work Inquiry</h3>
+            <p class="text-muted">Lets work together!</p>
+          </div>
+          <div class="m-3">
+            <a
+              href="/contact.html"
+              title="Contact Aleksandra"
+              class="btn-branding contact-me-footer"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+        <div class="d-flex justify-content-center m-5">
+          <a
+            href="mailto:aleksandra.dafine@gmail.com"
+            class="email-link m-3"
+            title="email Aleksandra"
+            >aleksandra.dafine@gmail.com</a
+          >
+        </div>
+        <div class="social-links d-flex justify-content-center">
+          <a href="https://x.com/sasha_codes_" target="_blank"
+            ><i class="fa-brands fa-twitter" title="Twitter Profile"></i
+          ></a>
+          <a
+            href="https://github.com/sasha-ak"
+            target="_blank"
+            title="GitHub Profile"
+            ><i class="fa-brands fa-github"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/aleksandra-ak/"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
+            <i class="fa-brands fa-linkedin"></i
+          ></a>
+        </div>
+        <p class="coded-by">
+          🐱‍🏍 This project was coded by Aleksandra and is
+          <a
+            href="https://github.com/sasha-ak/Aleksandra-Portfolio-Project"
+            target="_blank"
+            >open-sourced</a
+          >.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
