--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aleksandra Front-end Developer</title>
+    <meta
+      name="description"
+      content="Aleksandra is a front-end engineer, based in  Europe. She possess knowledge of HTML, CSS, JavaScript, API, Bootstrap, Responsive."
+    />
+    <title>Frontend Developer - Aleksandra Dafine</title>
     <link rel="stylesheet" href="styles/app.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -30,26 +34,30 @@
   <body>
     <div class="container">
       <nav class="d-flex justify-content-between">
-        <a href="/">
-          <img src="images/logo2.PNG" class="logo d-none d-md-block" alt="" />
+        <a href="/" title="Homepage">
+          <img
+            src="images/logo2.PNG"
+            class="logo d-none d-md-block"
+            alt="Aleksandra logo"
+          />
           <img
             src="images/logo-small.PNG"
             class="logo d-block d-md-none"
-            alt=""
+            alt="Aleksandra logo"
           />
         </a>
         <ul>
           <li class="active">
-            <a href="/">Home</a>
+            <a href="/" title="Homepage">Home</a>
           </li>
           <li>
-            <a href="/about.html">About</a>
+            <a href="/about.html" title="About Aleksandra">About</a>
           </li>
           <li>
-            <a href="/work.html">Work</a>
+            <a href="/work.html" title="Aleksandra's Work">Work</a>
           </li>
           <li>
-            <a href="/contact.html">Contact</a>
+            <a href="/contact.html" title="Contact Aleksandra">Contact</a>
           </li>
         </ul>
       </nav>
@@ -60,12 +68,14 @@
       <h1>Aleksandra Dafine</h1>
       <h2 class="mb-5 mt-3">Front-end developer based in Europe</h2>
       <div>
-        <a href="about.html" class="btn-branding">Contact me</a>
+        <a href="/contact.html" class="btn-branding" title="Contact me"
+          >Contact me</a
+        >
       </div>
     </div>
-    <h5 class="text-center m-5">
+    <h3 class="text-center m-5">
       Some of the featured projects I have worked on
-    </h5>
+    </h3>
     <div class="line mb-5">
       <hr />
       <br />
@@ -76,7 +86,7 @@
           <img
             src="images/world-time1.PNG"
             class="img-fluid img-home-page"
-            alt=""
+            alt="World Clock project preview"
           />
         </div>
         <div class="col">
@@ -91,7 +101,9 @@
               laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
               vel augue.
             </p>
-            <a href="#" class="btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn-branding-outline" title="Learn more"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -109,14 +121,16 @@
               laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
               vel augue.
             </p>
-            <a href="#" class="btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn-branding-outline" title="Learn more"
+              >Learn more</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
           <img
             src="images/world-weather1.PNG"
             class="img-fluid img-home-page"
-            alt=""
+            alt="Weather project preview"
           />
         </div>
       </div>
@@ -126,7 +140,7 @@
           <img
             src="images/ai-quotes1.PNG"
             class="img-fluid img-home-page"
-            alt=""
+            alt="AI Motivational quotes generator preview"
           />
         </div>
         <div class="col">
@@ -141,7 +155,9 @@
               laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
               vel augue.
             </p>
-            <a href="#" class="btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn-branding-outline" title="Learn more"
+              >Learn more</a
+            >
           </div>
         </div>
       </div>
@@ -158,14 +174,16 @@
               laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
               vel augue.
             </p>
-            <a href="#" class="btn-branding-outline">Learn more</a>
+            <a href="/work.html" class="btn-branding-outline" title="Learn more"
+              >Learn more</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
           <img
             src="images/tea-time-1.PNG"
             class="img-fluid img-home-page"
-            alt=""
+            alt="Tea time project preview"
           />
         </div>
       </div>
@@ -174,27 +192,52 @@
           class="contact-box d-flex justify-content-between m-5 d-none d-md-flex"
         >
           <div>
-            <h4>Work Inquiry</h4>
+            <h3>Work Inquiry</h3>
             <p class="text-muted">Lets work together!</p>
           </div>
           <div class="m-3">
-            <a href="" class="btn-branding contact-me-footer">Contact Me</a>
+            <a
+              href="/contact.html"
+              title="Contact Aleksandra"
+              class="btn-branding contact-me-footer"
+              >Contact Me</a
+            >
           </div>
         </div>
         <div class="d-flex justify-content-center m-5">
-          <a href="mailto:aleksandra10ak@gmail.com" class="email-link"
-            >aleksandra10ak@gmail.com</a
+          <a
+            href="mailto:aleksandra.dafine@gmail.com"
+            class="email-link m-3"
+            title="email Aleksandra"
+            >aleksandra.dafine@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
-          <a href="/"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://github.com/sasha-ak" target="_blank"
+          <a href="https://x.com/sasha_codes_" target="_blank"
+            ><i class="fa-brands fa-twitter" title="Twitter Profile"></i
+          ></a>
+          <a
+            href="https://github.com/sasha-ak"
+            target="_blank"
+            title="GitHub Profile"
             ><i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/aleksandra-ak/" target="_blank">
+          <a
+            href="https://www.linkedin.com/in/aleksandra-ak/"
+            target="_blank"
+            title="LinkedIn Profile"
+          >
             <i class="fa-brands fa-linkedin"></i
           ></a>
         </div>
+        <p class="coded-by">
+          🐱‍🏍 This project was coded by Aleksandra and is
+          <a
+            href="https://github.com/sasha-ak/Aleksandra-Portfolio-Project"
+            target="_blank"
+            >open-sourced</a
+          >.
+        </p>
       </footer>
     </div>
   </body>
