Added valid content on about-me section and about the projects.

--- a/about.html
+++ b/about.html
@@ -66,23 +66,61 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="content">
-            <h1 class="mb-5">Hi I am Aleksandra</h1>
-            <h2 class="mb-4">Frontend Developer, based in Spain.</h2>
-            <p class="mb-5">
-              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
-              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
-              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
-              feugiat a, tellus. Phasellus viverra nulla ut metus varius
-              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
-              vel augue.
-            </p>
-            <a href="/work.html" class="btn-branding" title="See my projects"
-              >See my projects</a
-            >
+            <h1 class="mb-5">Hi, I am Aleksandra</h1>
+            <h2 class="mb-3">Frontend Developer, based in Spain.</h2>
+            <div class="about-me">
+              <p class="mb-3">
+                I'm a passionate and motivated Junior Frontend Developer, with a
+                foundation in HTML, CSS, JavaScript, and hands-on experience
+                from the SheCodes coding school. I'm excited to embark on my
+                career in web development. Before transitioning to tech, I spent
+                nine years at Booking.com, where I honed my skills in digital
+                marketing, customer service, and partner coordination. This
+                diverse background has equipped me with a unique blend of
+                technical know-how and interpersonal skills, allowing me to
+                tackle challenges from multiple angles.
+              </p>
+              <div class="mb-3"><h2>What I Bring to the Table:</h2></div>
+
+              <div class="headings">Technical Skills:</div>
+              <p>
+                Proficient in HTML, CSS, JavaScript, Git, GitHub, API
+                integration, and hosting. Familiar with tools like VS Code,
+                Google Analytics, SEO techniques, and more.
+              </p>
+              <div class="headings">Digital Marketing Expertise:</div>
+              <p>
+                Experienced with SEO, Google Analytics, and Semrush, enhancing
+                content visibility and performance.
+              </p>
+              <div class="headings">Multilingual Communication:</div>
+              <p>
+                Fluent in English and Russian, with intermediate knowledge of
+                Dutch and Spanish languages, enabling effective communication in
+                diverse environments.
+              </p>
+
+              <div class="headings">Continuous Learning:</div>
+              <p>
+                Recently, I completed courses on AI, blockchain, and extended
+                reality, constantly expanding my skill set to stay ahead in the
+                tech industry.
+              </p>
+
+              <div class="mt-4 mb-4">
+                Explore my projects, see what I've been working on, and feel
+                free to get in touch. I'm always eager to connect with fellow
+                developers and potential collaborators.
+              </div>
+              <h2 class="mb-5 mt-5">Let's build something amazing together!</h2>
+
+              <a href="/work.html" class="btn-branding" title="See my projects"
+                >See my projects</a
+              >
+            </div>
           </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 mt-4">
           <img
             src="images/image-3.jpg"
             class="img-fluid"
@@ -90,7 +128,6 @@
           />
         </div>
       </div>
-
       <footer>
         <div
           class="contact-box d-flex justify-content-between m-5 d-none d-md-flex"
