--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <div class="hero">
       <p class="mb-5">PORTFOLIO</p>
       <h1>Aleksandra Dafine</h1>
-      <h2 class="mb-5 mt-3">Front-end developer based in Europe</h2>
+      <h2 class="mb-5 mt-3">Frontend developer based in Europe</h2>
       <div>
         <a href="/contact.html" class="btn-branding" title="Contact me"
           >Contact me</a
@@ -83,23 +83,25 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img
-            src="images/world-time1.PNG"
-            class="img-fluid img-home-page"
-            alt="World Clock project preview"
-          />
+          <a href="https://what-time-is-it-now.netlify.app/" target="_blank">
+            <img
+              src="images/world-time1.PNG"
+              class="img-fluid img-home-page"
+              alt="World Clock project preview"
+          /></a>
         </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">World Clock Project</h2>
             <p class="mb-5 text-muted">
-              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
-              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
-              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
-              feugiat a, tellus. Phasellus viverra nulla ut metus varius
-              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
-              vel augue.
+              The SheCodes World Clock Project is a dynamic web application that
+              allows users to view the current time in multiple cities around
+              the world. Utilizing HTML, CSS, and JavaScript, I designed and
+              developed this project to enhance my skills in front-end
+              development. The project features an intuitive user interface,
+              real-time updates, and the ability to add and remove cities with
+              ease. It showcases my ability to work with APIs, manage
+              asynchronous data, and create user-friendly applications.
             </p>
             <a href="/work.html" class="btn-branding-outline" title="Learn more"
               >Learn more</a
@@ -113,13 +115,16 @@
           <div class="project-description">
             <h2 class="mb-5">Weather Project</h2>
             <p class="mb-5 text-muted">
-              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
-              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
-              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
-              feugiat a, tellus. Phasellus viverra nulla ut metus varius
-              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
-              vel augue.
+              The SheCodes Weather Application is a responsive web app designed
+              to provide real-time weather updates for cities worldwide.
+              Developed using HTML, CSS, and JavaScript, this project showcases
+              my proficiency in front-end development and API integration. Users
+              can search for their desired city and receive current weather
+              conditions, including temperature, humidity, and weather
+              descriptions. The application features a clean and user-friendly
+              interface, real-time data fetching, and visually appealing weather
+              icons, demonstrating my ability to create practical and engaging
+              web solutions.
             </p>
             <a href="/work.html" class="btn-branding-outline" title="Learn more"
               >Learn more</a
@@ -127,33 +132,37 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img
-            src="images/world-weather1.PNG"
-            class="img-fluid img-home-page"
-            alt="Weather project preview"
-          />
+          <a href="https://basic-meteo-app.netlify.app/" target="_blank">
+            <img
+              src="images/world-weather1.PNG"
+              class="img-fluid img-home-page"
+              alt="Weather project preview"
+          /></a>
         </div>
       </div>
 
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img
-            src="images/ai-quotes1.PNG"
-            class="img-fluid img-home-page"
-            alt="AI Motivational quotes generator preview"
-          />
+          <a href="https://ai-motivational-quotes.netlify.app/" target="_blank">
+            <img
+              src="images/ai-quotes1.PNG"
+              class="img-fluid img-home-page"
+              alt="AI Motivational quotes generator preview"
+            />
+          </a>
         </div>
         <div class="col">
           <div class="project-description">
             <h2 class="mb-5">AI Motivational Quotes Generator</h2>
             <p class="mb-5 text-muted">
-              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
-              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
-              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
-              feugiat a, tellus. Phasellus viverra nulla ut metus varius
-              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
-              vel augue.
+              The SheCodes AI Motivational Quotes Generator is an innovative web
+              application that delivers personalized motivational quotes using
+              artificial intelligence. Built with HTML, CSS, and JavaScript,
+              this project integrates AI to generate unique and inspiring quotes
+              tailored to the user's preferences. The application features a
+              sleek and modern design, ensuring an engaging user experience.
+              This project highlights my ability to incorporate AI technologies
+              into web development, enhancing interactivity and personalization.
             </p>
             <a href="/work.html" class="btn-branding-outline" title="Learn more"
               >Learn more</a
@@ -166,13 +175,15 @@
           <div class="project-description">
             <h2 class="mb-5">Tea Time Project</h2>
             <p class="mb-5 text-muted">
-              Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
-              Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate
-              eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae,
-              eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis,
-              feugiat a, tellus. Phasellus viverra nulla ut metus varius
-              laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi
-              vel augue.
+              The Tea Time Landing Page is a beautifully designed web page
+              created to showcase a premium tea brand. Developed using HTML,
+              CSS, this project emphasizes clean design, elegant typography, and
+              engaging visuals to create an inviting user experience. The
+              landing page includes sections highlighting the brand's story,
+              product offerings, and a call-to-action for visitors to explore
+              more or make a purchase. This project demonstrates my skills in
+              creating aesthetically pleasing and user-friendly websites that
+              effectively communicate brand identity and drive user engagement.
             </p>
             <a href="/work.html" class="btn-branding-outline" title="Learn more"
               >Learn more</a
@@ -180,11 +191,12 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img
-            src="images/tea-time-1.PNG"
-            class="img-fluid img-home-page"
-            alt="Tea time project preview"
-          />
+          <a href="https://tea-time-fun.netlify.app/" target="_blank">
+            <img
+              src="images/tea-time-1.PNG"
+              class="img-fluid img-home-page"
+              alt="Tea time project preview"
+          /></a>
         </div>
       </div>
       <footer>
