--- a/work.html
+++ b/work.html
@@ -64,7 +64,9 @@
     </div>
     <div class="content-container container">
       <div class="content">
-        <h1 class="mb-5">Take a look at what I've been working on!</h1>
+        <h1 class="mb-5 text-muted">
+          Take a look at what I've been working on
+        </h1>
         <div class="row">
           <div class="col-md-6 mt-5 mb-4">
             <a href="https://what-time-is-it-now.netlify.app/" target="_blank">
