--- a/about.html
+++ b/about.html
@@ -82,25 +82,25 @@
               </p>
               <div class="mb-3"><h2>What I Bring to the Table:</h2></div>
 
-              <div class="headings">Technical Skills:</div>
+              <div class="headings">Technical Skills</div>
               <p>
                 Proficient in HTML, CSS, JavaScript, Git, GitHub, API
                 integration, and hosting. Familiar with tools like VS Code,
                 Google Analytics, SEO techniques, and more.
               </p>
-              <div class="headings">Digital Marketing Expertise:</div>
+              <div class="headings">Digital Marketing Expertise</div>
               <p>
                 Experienced with SEO, Google Analytics, and Semrush, enhancing
                 content visibility and performance.
               </p>
-              <div class="headings">Multilingual Communication:</div>
+              <div class="headings">Multilingual Communication</div>
               <p>
                 Fluent in English and Russian, with intermediate knowledge of
                 Dutch and Spanish languages, enabling effective communication in
                 diverse environments.
               </p>
 
-              <div class="headings">Continuous Learning:</div>
+              <div class="headings">Continuous Learning</div>
               <p>
                 Recently, I completed courses on AI, blockchain, and extended
                 reality, constantly expanding my skill set to stay ahead in the
