--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="hero">
       <p class="mb-5">PORTFOLIO</p>
-      <h1>Aleksandra Dafine</h1>
+      <h1>Aleksandra Dafinè</h1>
       <h2 class="mb-5 mt-3">Frontend developer based in Europe</h2>
       <div>
         <a href="/contact.html" class="btn-branding" title="Contact me"
