Deleted some images. Replaced landing page project , updated links and description

--- a/index.html
+++ b/index.html
@@ -170,20 +170,22 @@
           </div>
         </div>
       </div>
-      <div class="row mt-5">
+      <div class="row mt-3">
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Tea Time Project</h2>
+            <h2 class="mb-5">Landing Page about Lisbon</h2>
             <p class="mb-5 text-muted">
-              The Tea Time Landing Page is a beautifully designed web page
-              created to showcase a premium tea brand. Developed using HTML,
-              CSS, this project emphasizes clean design, elegant typography, and
-              engaging visuals to create an inviting user experience. The
-              landing page includes sections highlighting the brand's story,
-              product offerings, and a call-to-action for visitors to explore
-              more or make a purchase. This project demonstrates my skills in
-              creating aesthetically pleasing and user-friendly websites that
-              effectively communicate brand identity and drive user engagement.
+              The Travel to Lisbon landing page is a visually engaging and
+              informative web page designed to inspire and guide travelers to
+              the beautiful city of Lisbon. Developed using HTML, CSS, and
+              responsive design techniques, this project showcases a clean
+              layout, vibrant imagery, and intuitive navigation. The landing
+              page features sections that highlight key attractions, local tips,
+              and essential travel information, all aimed at enhancing the
+              user's experience and helping them plan their trip. This project
+              demonstrates my ability to create aesthetically pleasing,
+              responsive websites that effectively communicate information and
+              engage visitors.
             </p>
             <a href="/work.html" class="btn-branding-outline" title="Learn more"
               >Learn more</a
@@ -191,11 +193,11 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <a href="https://tea-time-fun.netlify.app/" target="_blank">
+          <a href="https://travel-to-lisbon.netlify.app/" target="_blank">
             <img
-              src="images/tea-time-1.PNG"
+              src="images/lisbon-2.PNG"
               class="img-fluid img-home-page"
-              alt="Tea time project preview"
+              alt="Lisbon Landing Page preview"
           /></a>
         </div>
       </div>
