--- a/work.html
+++ b/work.html
@@ -111,14 +111,14 @@
             </p>
           </div>
           <div class="col-md-6 mt-5 mb-4">
-            <a href="https://tea-time-fun.netlify.app/" target="_blank">
+            <a href="https://travel-to-lisbon.netlify.app/" target="_blank">
               <img
-                src="images/tea-time-1.PNG"
+                src="images/lisbon-2.PNG"
                 class="img-fluid mb-4"
-                alt="Tea Time Project preview"
-                title="Click to see the Tea Time Project"
+                alt="Lisbon Landing Page"
+                title="Click to see Lisbon Landing Page"
             /></a>
-            <h3 class="m-0">Tea Time Landing Page</h3>
+            <h3 class="m-0">Lisbon Landing Page</h3>
             <p class="text-muted">Built with HTML, CSS</p>
           </div>
         </div>
