Corrected personal info

--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
 
         <p>
           <a href="mailto:aleksandra.dafine@gmail.com"
-            >aleksandra.dafine@gmail.com</a
+            >aleksandra10ak@gmail.com</a
           >
         </p>
         <h3>LinkedIn</h3>
