--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="description"
       content="Aleksandra is a front-end engineer, based in  Europe. She possess knowledge of HTML, CSS, JavaScript, API, Bootstrap, Responsive."
     />
-    <title>Frontend Developer - Aleksandra Dafine</title>
+    <title>Frontend Developer - Aleksandra Krizanovska</title>
     <link rel="stylesheet" href="styles/app.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -65,7 +65,7 @@
 
     <div class="hero">
       <p class="mb-5">PORTFOLIO</p>
-      <h1>Aleksandra Dafinè</h1>
+      <h1>Aleksandra Krizanovska</h1>
       <h2 class="mb-5 mt-3">Frontend developer based in Europe</h2>
       <div>
         <a href="/contact.html" class="btn-branding" title="Contact me"
