--- a/about.html
+++ b/about.html
@@ -150,7 +150,7 @@
             href="mailto:aleksandra.dafine@gmail.com"
             class="email-link m-3"
             title="email Aleksandra"
-            >aleksandra.dafine@gmail.com</a
+            >aleksandra10ak@gmail.com</a
           >
         </div>
         <div class="social-links d-flex justify-content-center">
